# shinwa

./: .env.example  .gitignore  BUG_FIXES_REPORT.md  CLAUDE.md  DATABASE_MIGRATION_GUIDE.md  DEBUG_AI_ISSUES.md  E2E_TEST_REPORT.md  ENV_SETUP_GUIDE.md  PROJECT_STRUCTURE.md  README.md  STRIPE_SETUP.md  docker-compose.yml  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  render.yaml  result.md  tailwind.config.js  togo_result.md  tsconfig.json  ui_result.md
.github/workflows/: claude.yml  refresh_claude_tokens.yml
backend/: .env.example  README.md  pyproject.toml
backend/src/shinwa_agent/: main.py
backend/src/shinwa_agent/config/: settings.py
docs/: ISSUES.md  TODO.md
prisma/: dev.db  schema.prisma
prisma/migrations/20250701062618_init/: migration.sql
prisma/migrations/20251024214819_init/: migration.sql
scripts/: README.md  check-db-connection.js  setup-database.js
src/: middleware.ts
src/__tests__/components/: CharacterDetailModal.test.tsx  TravelSimulator.test.tsx  WorldMapDisplay.test.tsx
src/__tests__/services/: transport-service.test.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/account/: page.tsx
src/app/pricing/: page.tsx
src/app/projects/: page.tsx
src/components/ai/: AIUsageDisplay.tsx  CompactAIUsageDisplay.tsx  GenerationProgressTracker.tsx
src/components/chapter/: BackgroundEventModal.tsx  ForeshadowingMap.tsx  ForeshadowingModal.tsx
src/hooks/: useCurrentUser.ts  useFocusTrap.ts  usePersistentError.ts
src/lib/: prisma.ts  stripe.ts
src/lib/ai/: init.ts  (+6 more)
src/types/: next-auth.d.ts
(+95 files in other folders)
