[project]
name = "shinwa-agent"
version = "0.1.0"
description = "Autonomous AI Agent Backend"
authors = [
    {name = "halc8312"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.120.0,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "redis (>=7.0.0,<8.0.0)",
    "openai (>=2.6.1,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "aiohttp (>=3.13.1,<4.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
